--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
